framec_tests/language_specific/python/v3_cli_project/negative/bad_project/project.frm
@target python
# Anchor for negative project: unresolved state across modules

